fix: navbar vertical alignment

--- a/src/app/components/navbar/navbar.module.scss
+++ b/src/app/components/navbar/navbar.module.scss
@@ -13,6 +13,7 @@
     max-width: var(--container-max-size);
     margin: 0 auto;
     justify-content: space-between;
+    align-items: center;
 
   }
 
